Add responsive styling for smaller screens in Header and Navigation modules

--- a/app/[lng]/components/Navigation.module.css
+++ b/app/[lng]/components/Navigation.module.css
@@ -1,6 +1,10 @@
 .navigation {
   display: flex;
   gap: 25px;
+
+  @media only screen and (max-width: 600px) {
+    gap: 10px;
+  }
 }
 
 .navLink {
