--- a/app/[lng]/components/Header.module.css
+++ b/app/[lng]/components/Header.module.css
@@ -8,6 +8,11 @@
   top: 0;
   z-index: 100;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  @media only screen and (max-width: 600px) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 .logo {
