Add Montserrat font import and apply font-family and text stroke to Hero module for improved styling

--- a/app/[lng]/components/Hero.module.css
+++ b/app/[lng]/components/Hero.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 .hero {
   min-height: 965px;
   display: flex;
@@ -36,6 +38,9 @@
   max-width: 800px;
   margin: 0 0 16px;
   position: relative;
+  font-family: Montserrat, serif;
+  -webkit-text-stroke-width: thin;
+  -webkit-text-stroke-color: #333;
   z-index: 1;
 }
 
