Update Carousel and Hero module CSS to ensure elements are properly sized and positioned for optimal display

--- a/app/[lng]/components/Carousel.css
+++ b/app/[lng]/components/Carousel.css
@@ -1,5 +1,7 @@
 .embla {
   overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
 
 .embla__container {
@@ -11,7 +13,7 @@
 
   img {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-position: center;
   }
 }
