--- a/app/[lng]/components/Statistic.module.css
+++ b/app/[lng]/components/Statistic.module.css
@@ -45,6 +45,8 @@
   font-weight: 800;
   line-height: 1;
   width: max-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .statisticDescription {
@@ -53,6 +55,8 @@
   line-height: 1;
   margin-top: -9px;
   width: max-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media (max-width: 600px) {
