--- a/app/[lng]/components/Statistic.module.css
+++ b/app/[lng]/components/Statistic.module.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 .statisticsContainer {
   display: flex;
   margin-top: 63px;
   align-items: center;
   gap: 40px 60px;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat, -apple-system, Roboto, Helvetica, sans-serif;
   color: rgb(255, 255, 255);
   flex-wrap: wrap;
 }
